--- a/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_reboot.scss
+++ b/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_reboot.scss
@@ -171,6 +171,14 @@ ol ol,
 ul ul,
 ol ul,
 ul ol {
+ margin-bottom: 0;
+}
+
+li > *:first-child {
+  margin-top: 0;
+}
+
+li > *:last-child {
   margin-bottom: 0;
 }
 
