Fixes avatar issues: WCAG and empty image src attribute My-account header only shows uploaded avatar after page reload Avoid 404 when viewing profile of deleted customer

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
@@ -77,7 +77,7 @@
         color: inherit;
     }
 
-    .avatar-link, 
+    .avatar-outer, 
     .avatar-img, 
     .avatar-letter {
         border-radius: 50%;
