--- a/src/Smartstore.Web/Views/Shared/Components/MyAccountHeader/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/MyAccountHeader/Default.cshtml
@@ -3,7 +3,7 @@
 @model MyAccountHeaderModel
 
 <div class="myaccount-header row gx-2 gy-1">
-    <div class="col-auto d-flex align-self-center justify-content-center">
+    <div class="avatar-container col-auto d-flex align-self-center justify-content-center">
         <partial name="Customer.Avatar" model="Model.Avatar" />
     </div>
     <div class="col align-self-center text-truncate pr-4 pr-md-1">
