Adds missing alt attributes to image tags

--- a/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
@@ -32,7 +32,7 @@
                data-abbreviation="@name">
                 @if (ViewBag.UseImages == true)
                 {
-                    <img src="@Url.Content("~/images/flags/" + lang.FlagImageFileName)" alt="@lang.FlagImageFileName" />
+                    <img src="@Url.Content("~/images/flags/" + lang.FlagImageFileName)" alt="@name" />
                 }
                 <span>@name</span>
             </a>
