--- a/src/Smartstore.Web/Views/Shared/Components/Menu/ListGroup.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Menu/ListGroup.cshtml
@@ -32,7 +32,7 @@
             }
             else if (hasImages && item.ImageUrl.HasValue())
             {
-                <img class="sm-icon" src="@Url.Content(item.ImageUrl)" alt="" />
+                <img class="sm-icon" src="@Url.Content(item.ImageUrl)" alt="@itemText" />
             }
             else if (hasImages)
             {
