--- a/src/Smartstore.Web/Views/Checkout/Partials/PaymentMethodList.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/PaymentMethodList.cshtml
@@ -78,7 +78,7 @@
                 {
                     <div class="row no-gutters">
                         <div sm-if="paymentMethod.BrandUrl.HasValue()" class="col-auto payment-brand">
-                            <img class="img-fluid" src="@Url.Content(paymentMethod.BrandUrl)" />
+                            <img class="img-fluid" src="@Url.Content(paymentMethod.BrandUrl)" alt="@paymentMethod.Name" />
                         </div>
                         <div class="col">
                             @{ await RenderPaymentMethod(); }
