--- a/src/Smartstore.Web/Views/Entity/Picker.List.cshtml
+++ b/src/Smartstore.Web/Views/Entity/Picker.List.cshtml
@@ -25,7 +25,7 @@
             <div sm-if="item.ImageUrl.HasValue()" class="col-auto">
                 <div class="entpicker-thumb">
                     <div class="img-center-container">
-                        <img src="@item.ImageUrl" alt="" />
+                        <img src="@item.ImageUrl" alt="@item.Title" />
                     </div>
                 </div>
             </div>
