--- a/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.Radio.cshtml
+++ b/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.Radio.cshtml
@@ -21,12 +21,12 @@
                 if (item.SeName.HasValue())
                 {
                     <a asp-route="Product" asp-route-SeName="@item.SeName" class="choice-item-img">
-                        <img src="@item.ImageUrl" />
+                        <img src="@item.ImageUrl" alt="@item.Name" />
                     </a>
                 }
                 else
                 {
-                    <img src="@item.ImageUrl" class="choice-item-img" />
+                    <img src="@item.ImageUrl" class="choice-item-img" alt="@item.Name" />
                 }
             }
             else if (hasColor)
