--- a/src/Smartstore.Web/Views/Shared/Components/FileUploader/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FileUploader/Default.cshtml
@@ -94,7 +94,7 @@
         <figure class="file-figure d-flex m-0 align-items-center justify-content-center file-thumb show loaded" data-type="@dataType">
             <i class="file-icon fa-fw show d-none"></i>
             @*Append number of ticks because otherwise when an image is updated via API or import, the old image will still be displayed.*@
-            <img class="file-img" data-dz-thumbnail attr-src='(previewUrl.HasValue(), previewUrl + "&num=" + DateTime.UtcNow.Ticks)' />
+            <img class="file-img" data-dz-thumbnail attr-src='(previewUrl.HasValue(), previewUrl + "&num=" + DateTime.UtcNow.Ticks)' alt="@fileName" />
         </figure>
 
         <!-- Media gallery preview overlay -->
