--- a/src/Smartstore.Web/Views/Shared/Components/Menu/Navbar.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Menu/Navbar.cshtml
@@ -105,7 +105,7 @@
                     }
                     else if (item.ImageUrl.HasValue())
                     {
-                        <img class="sm-icon" src="@Url.Content(item.ImageUrl)" alt="" />
+                        <img class="sm-icon" src="@Url.Content(item.ImageUrl)" alt="@itemText" />
                     }
                     <span sm-language-attributes-for="item">@itemText</span>
                 </a>
