--- a/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -105,7 +105,7 @@
         <zone name="page-end"></zone>
     </div>
 
-    <a href="#" id="scroll-top" class="scrollto d-flex align-items-center justify-content-center shadow-sm">
+    <a href="#" id="scroll-top" class="scrollto d-flex align-items-center justify-content-center shadow-sm" aria-label="@T("Common.ScrollUp")">
         <i class="fa fa-lg fa-angle-up"></i>
     </a>
 </div>
