--- a/src/Smartstore.Web/Views/Shared/Components/CookieManager/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/CookieManager/Default.cshtml
@@ -42,9 +42,14 @@
                 <div class="cm-consent">
                     <div class="nav-toggler align-items-center row g-0 px-0">
                         <div class="cm-consent-switch col col-auto">
-                            <input type="checkbox" asp-for="RequiredConsent" disabled sm-switch="true" />
+                            <input type="checkbox" asp-for="RequiredConsent" disabled sm-switch="true" aria-labelledby="cookie-required-header" />
                         </div>
-                        <h5 class="cm-consent-title collapsed col m-0 pl-3" data-toggle="collapse" data-target="#required-cookies" aria-controls="required-cookies" aria-expanded="false">
+                        <h5 id="cookie-required-header" 
+                            class="cm-consent-title collapsed col m-0 pl-3" 
+                            data-toggle="collapse" 
+                            data-target="#required-cookies" 
+                            aria-controls="required-cookies" 
+                            aria-expanded="false">
                             @T("CookieManager.Dialog.Required.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
                         </h5>
@@ -69,9 +74,14 @@
                 <div class="cm-consent">
                     <div class="row nav-toggler align-items-center g-0 px-0">
                         <div class="cm-consent-switch col col-auto">
-                            <input type="checkbox" asp-for="AnalyticsConsent" sm-switch="true" />
+                            <input type="checkbox" asp-for="AnalyticsConsent" sm-switch="true" aria-labelledby="cookie-analytics-header" />
                         </div>
-                        <h5 class="cm-consent-title collapsed col m-0 pl-3" data-toggle="collapse" data-target="#analytics-cookies" aria-controls="analytics-cookies" aria-expanded="false">
+                        <h5 id="cookie-analytics-header" 
+                            class="cm-consent-title collapsed col m-0 pl-3" 
+                            data-toggle="collapse" 
+                            data-target="#analytics-cookies"
+                            aria-controls="analytics-cookies" 
+                            aria-expanded="false">
                             @T("CookieManager.Dialog.Analytics.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
                         </h5>
@@ -96,9 +106,14 @@
                 <div sm-if="thirdPartyCookieInfos.Any()" class="cm-consent">
                     <div class="row nav-toggler align-items-center g-0 px-0">
                         <div class="cm-consent-switch col col-auto">
-                            <input type="checkbox" asp-for="ThirdPartyConsent" sm-switch="true" />
+                            <input type="checkbox" asp-for="ThirdPartyConsent" sm-switch="true" aria-labelledby="cookie-thirdparty-header" />
                         </div>
-                        <h5 class="cm-consent-title collapsed col m-0 pl-3" data-toggle="collapse" data-target="#third-party-cookies" aria-controls="third-party-cookies" aria-expanded="false">
+                        <h5 id="cookie-thirdparty-header" 
+                            class="cm-consent-title collapsed col m-0 pl-3" 
+                            data-toggle="collapse" 
+                            data-target="#third-party-cookies" 
+                            aria-controls="third-party-cookies" 
+                            aria-expanded="false">
                             @T("CookieManager.Dialog.ThirdParty.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
                         </h5>
@@ -108,7 +123,6 @@
                         <p class="cm-consent-intro">
                             @T("CookieManager.Dialog.ThirdParty.Intro")
                         </p>
-
                         <table class="cm-info-table table table-striped fs-xs m-0">
                             @foreach (var info in thirdPartyCookieInfos)
                             {
@@ -124,9 +138,14 @@
                 <div sm-if="consentAdUserData.Any()" class="cm-consent">
                     <div class="row nav-toggler align-items-center g-0 px-0">
                         <div class="cm-consent-switch col col-auto">
-                            <input type="checkbox" asp-for="AdUserDataConsent" sm-switch="true" />
+                            <input type="checkbox" asp-for="AdUserDataConsent" sm-switch="true" aria-labelledby="cookie-aduserdataconsent-header" />
                         </div>
-                        <h5 class="cm-consent-title collapsed col m-0 pl-3" data-toggle="collapse" data-target="#ad-user-data-consent" aria-controls="ad-user-data-consent" aria-expanded="false">
+                        <h5 id="cookie-aduserdataconsent-header" 
+                            class="cm-consent-title collapsed col m-0 pl-3" 
+                            data-toggle="collapse" 
+                            data-target="#ad-user-data-consent" 
+                            aria-controls="ad-user-data-consent" 
+                            aria-expanded="false">
                             @T("CookieManager.Dialog.AdUserDataConsent.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
                         </h5>
@@ -151,9 +170,14 @@
                 <div sm-if="consentAdPersonalization.Any()" class="cm-consent">
                     <div class="row nav-toggler align-items-center g-0 px-0">
                         <div class="cm-consent-switch col col-auto">
-                            <input type="checkbox" asp-for="AdPersonalizationConsent" sm-switch="true" />
+                            <input type="checkbox" asp-for="AdPersonalizationConsent" sm-switch="true" aria-labelledby="cookie-adpersonalizationconsent-header" />
                         </div>
-                        <h5 class="cm-consent-title collapsed col m-0 pl-3" data-toggle="collapse" data-target="#ad-personalization-consent" aria-controls="ad-personalization-consent" aria-expanded="false">
+                        <h5 id="cookie-adpersonalizationconsent-header" 
+                            class="cm-consent-title collapsed col m-0 pl-3" 
+                            data-toggle="collapse" 
+                            data-target="#ad-personalization-consent" 
+                            aria-controls="ad-personalization-consent" 
+                            aria-expanded="false">
                             @T("CookieManager.Dialog.AdPersonalizationConsent.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
                         </h5>
