--- a/src/Smartstore.Web/Views/Shared/Components/StoreThemeSelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/StoreThemeSelector/Default.cshtml
@@ -16,7 +16,7 @@
 }
 
 <form id="store-theme-selector" sm-ajax method="post" asp-action="ChangeTheme" asp-controller="Common" sm-oncomplete="onStoreThemeChangedRequestCompleted">
-    <select id="themeName" name="themeName" class="store-theme-list noskin form-control rounded-pill shadow-xs" asp-items="items"></select>
+    <select id="themeName" name="themeName" class="store-theme-list noskin form-control rounded-pill shadow-xs" asp-items="items" aria-labelledby="theme-selector-header"></select>
 </form>
 
 <script>
