Updated hint of captcha settings

--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
@@ -417,7 +417,7 @@
                 </div>
                 <div class="adminRow">
                     <div class="alert alert-info">
-                        @T("Admin.Configuration.Settings.General.Common.Captcha.Hint")
+                        @Html.Raw(T("Admin.Configuration.Settings.General.Common.Captcha.Hint"))
                     </div>
                 </div>
                 <div class="adminRow">
