--- a/src/Smartstore.Web/Views/Product/Partials/Product.Bundle.Items.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Bundle.Items.cshtml
@@ -14,6 +14,7 @@
                 <div sm-if="img != null && !item.BundleItem.HideThumbnail" 
                         class="pd-bundle-item-image col" 
                         style="min-width: @(item.ThumbDimensions)px; max-width: @(item.ThumbDimensions)px;">
+                    @* TODO: (mg) ImageTagHelper adds alt attribute, doesn't it? Check and rethink. *@
                     <img sm-file="img" sm-size="gallery.ThumbSize" class="img-fluid pd-dyn-thumb" alt="@item.Name" />
                 </div>
                 <div class="pd-bundle-item-body col pl-3">
