WCAG Forms review

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -7,7 +7,7 @@
 
 <div sm-if="Model.Products.TotalCount >= (Model.Configuration.SearchMinAssociatedCount ?? CatalogSettings.SearchMinAssociatedProductsCount)" 
      class="instasearch-form has-icon">
-    <input type="text"
+    <input type="search"
            class="instasearch-term form-control skip-pd-ajax-update"
            name="associatedProductsSearchTerm"
            placeholder="@T("Common.SearchProducts")"
