--- a/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -81,6 +81,7 @@
                                     data-target="#footer-newsletter" 
                                     aria-controls="footer-newsletter" 
                                     aria-expanded="false">
+                                    @* TODO: (mg) Actually this IS initially expanded on desktop, but not on mobile. Problem?! Investigate and TBD with MC. *@
                                     @Html.Raw(T("Newsletter.Title"))
                                 </h4>
                                 <div class="collapse nav-collapse" id="footer-newsletter">
