--- a/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
@@ -3,7 +3,7 @@
 @model SearchBoxModel
 
 <form action="@Model.SearchUrl" class="instasearch-form has-icon" method="get">
-    <input type="text"
+    <input type="search"
            class="instasearch-term form-control text-truncate"
            name="q"
            value="@Model.CurrentQuery"
