--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -24,4 +24,5 @@
     <span class="input-group-icon instasearch-icon">
         <i class="fa fa-magnifying-glass"></i>
     </span>
+    <button type="submit" class="sr-only">Submit</button>
 </div>
