Using WebHelper.HtmlEncoder

--- a/src/Smartstore.Web/Areas/Admin/Views/Rule/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Rule/_CreateOrUpdate.cshtml
@@ -13,7 +13,7 @@
 
     string discountSelector(RuleSetAssignedToEntityModel x) => $"<a href='{Url.Action("Edit", "Discount", new { id = x.Id })}'>{x.Name.HtmlEncode()}</a>";
     string shippingSelector(RuleSetAssignedToEntityModel x) => $"<a href='{Url.Action("Edit", "Shipping", new { id = x.Id })}'>{x.Name.HtmlEncode()}</a>";
-    string paymentSelector(RuleSetAssignedToEntityModel x) => $"<a href='{Url.Action("Edit", "Payment", new { systemName = x.SystemName })}' title='{x.SystemName.HtmlEncode()}'>{x.Name.HtmlEncode()}</a>";
+    string paymentSelector(RuleSetAssignedToEntityModel x) => $"<a href='{Url.Action("Edit", "Payment", new { systemName = x.SystemName })}' title='{x.SystemName.AttributeEncode()}'>{x.Name.HtmlEncode()}</a>";
     string customerRoleSelector(RuleSetAssignedToEntityModel x) => $"<a href='{Url.Action("Edit", "CustomerRole", new { id = x.Id })}'>{x.Name.HtmlEncode()}</a>";
     string categorySelector(RuleSetAssignedToEntityModel x) => $"<a href='{Url.Action("Edit", "Category", new { id = x.Id })}'>{x.Name.HtmlEncode()}</a>";
 }
