Added missing password rule validation

--- a/src/Smartstore.Web/Views/Identity/PasswordRecoveryConfirm.cshtml
+++ b/src/Smartstore.Web/Views/Identity/PasswordRecoveryConfirm.cshtml
@@ -23,6 +23,11 @@
                 <input asp-for="Email" type="hidden" />
                 <input asp-for="Token" type="hidden" />
 
+                @if (ViewContext.ViewData.ModelState.ContainsKey(""))
+                {
+                    <div asp-validation-summary="ModelOnly"></div>
+                }
+
                 <div class="col-12 col-lg-9 col-xl-8">
                     <div class="form-group row">
                         <label asp-for="NewPassword" class="col-md-3 col-form-label required"></label>
